--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
@@ -26,6 +27,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "firebase-admin": "^13.6.0",
     "globals": "^16.5.0",
     "i18next": "^25.7.3",
     "postcss": "^8.5.6",
