--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "react": "^19.2.0",
