--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
-    "@google/generative-ai": "^0.24.1",
+    "@google/generative-ai": "0.24.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "react": "^19.2.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -35,7 +36,7 @@
     "postcss": "^8.5.6",
     "react-i18next": "^16.5.0",
     "react-router-dom": "^7.11.0",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.2.4"
   }
